CORA-3622 quick fix for popovers on firefox

--- a/app/components/Popover/Popover.module.css
+++ b/app/components/Popover/Popover.module.css
@@ -1,8 +1,8 @@
 .popover {
+  position: absolute;
   margin: 0;
   inset: unset;
   top: calc(anchor(top) + var(--gap-l));
-  /* stylelint-disable-next-line declaration-property-value-no-unknown */
   justify-self: anchor-center;
   position-try: normal flip-block;
   background-color: var(--color-background);
@@ -11,10 +11,6 @@
   box-shadow: var(--elevation);
   border-radius: var(--border-radius);
   max-width: 600px;
-
-  @supports not (top: anchor(center)) {
-    position: absolute;
-  }
 }
 
 .label-wrapper {
