--- a/app/components/Tooltip/Tooltip.module.css
+++ b/app/components/Tooltip/Tooltip.module.css
@@ -1,9 +1,8 @@
 .tooltip {
+  position: absolute;
   margin: 0;
   inset: unset;
-  /* stylelint-disable-next-line declaration-property-value-no-unknown */
   bottom: anchor(top);
-  /* stylelint-disable-next-line declaration-property-value-no-unknown */
   justify-self: anchor-center;
   position-try: normal flip-block;
   background-color: var(--color-background-inverted);
@@ -11,8 +10,4 @@
   padding: var(--gap-s);
   box-shadow: var(--elevation);
   border-radius: var(--border-radius-s);
-
-  @supports not (anchor-name: --my-anchor) {
-    position: absolute;
-  }
 }
